Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32638

MapGestureArea.panFinished() not emitted when panning does not end with a flick

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.1.0
    • None
    • observed on Linux and BlackBerry 10
    • 62234914bc39be509c6a764c99d592e0bc5ecb5c

    Description

      Using a MapGestureArea, if panning is stopped with pointer stationary and then released, the panFinished() signal is not emitted. panFinished() seems to only be emitted when the pan ends with some inertial movement of the map.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            amccarthy Aaron McCarthy
            jehrismann Jim Ehrismann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes