Emit panFinished() when pan finishes without a flick.

Task-number: QTBUG-32638
Change-Id: Idb49b6886993545667324a0c861d88ffefd29131
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>